--- a/front end/admin/add-services.html
+++ b/front end/admin/add-services.html
@@ -21,6 +21,7 @@
       <ul>
         <li><a href="admin.html">Dashboard</a></li>
         <li><a href="service-records.html">Service Record</a></li>
+        <li><a href="branchManagement.html">Garage Management</a></li>
         <li><a href="serviceManage.html" class="active">Service Management</a></li>
         <li><a href="userManagement.html">User Management</a></li>
         <li><a href="../index/index.html">Logout</a></li>
@@ -93,6 +94,7 @@
         <h3>Quick Links</h3>
         <p><a href="admin.html" class="active">Dashboard</a></p>
         <p><a href="service-records.html">Service Record</a></p>
+        <p><a href="branchManagement.html">Garage Management</a></p>
         <p><a href="serviceManage.html">Service Management</a></p>
         <p><a href="userManagement.html">User Management</a></p>
         <p><a href="../index/index.html" >Logout</a></p>
