--- a/front end/admin/admin.html
+++ b/front end/admin/admin.html
@@ -22,7 +22,8 @@
           <ul>
             <li><a href="admin.html" class="active">Dashboard</a></li>
             <li><a href="service-records.html">Service Record</a></li>
-            <li><a href="serviceManage.html" >Service Management</a></li>
+            <li><a href="branchManagement.html">Garage Management</a></li>
+            <li><a href="serviceManage.html">Service Management</a></li>
             <li><a href="userManagement.html">User Management</a></li>
             <li><a href="../index/index.html">Logout</a></li>
           </ul>
@@ -77,6 +78,7 @@
             <h3>Quick Links</h3>
             <p><a href="admin.html" class="active">Dashboard</a></p>
             <p><a href="service-records.html">Service Record</a></p>
+            <p><a href="branchManagement.html">Garage Management</a></p>
             <p><a href="serviceManage.html">Service Management</a></p>
             <p><a href="userManagement.html">User Management</a></p>
             <p><a href="../index/index.html" >Logout</a></p>
