--- a/front end/admin/service-records.html
+++ b/front end/admin/service-records.html
@@ -20,9 +20,10 @@
         </div>
         <nav>
           <ul>
-            <li><a href="admin.html" >Dashboard</a></li>
-            <li><a href="service-records.html" class="active" >Service Record</a></li>
-            <li><a href="serviceManage.html" >Service Management</a></li>
+            <li><a href="admin.html">Dashboard</a></li>
+            <li><a href="service-records.html" class="active">Service Record</a></li>
+            <li><a href="branchManagement.html">Garage Management</a></li>
+            <li><a href="serviceManage.html">Service Management</a></li>
             <li><a href="userManagement.html">User Management</a></li>
             <li><a href="../index/index.html">Logout</a></li>
           </ul>
@@ -71,6 +72,7 @@
             <h3>Quick Links</h3>
             <p><a href="admin.html" class="active">Dashboard</a></p>
             <p><a href="service-records.html">Service Record</a></p>
+            <p><a href="branchManagement.html">Garage Management</a></p>
             <p><a href="serviceManage.html">Service Management</a></p>
             <p><a href="userManagement.html">User Management</a></p>
             <p><a href="../index/index.html" >Logout</a></p>
