--- a/front end/admin/add-branch.html
+++ b/front end/admin/add-branch.html
@@ -77,7 +77,7 @@
 
       <button type="submit" class="btn admin-link">
         <i class="fas fa-save" aria-hidden="true"></i>
-        Save Service
+        Save Branch
       </button>
     </form>
   </section>
