--- a/front end/user/schedule.html
+++ b/front end/user/schedule.html
@@ -44,10 +44,10 @@
         <tr>
           <th onclick="sortSchedule(0)">Date</th>
           <th onclick="sortSchedule(1)">Time</th>
-          <th onclick="sortSchedule(2)">Vehicle</th>
-          <th onclick="sortSchedule(3)">Service</th>
+          <th onclick="sortSchedule(2)">Plate Number</th>
+          <th onclick="sortSchedule(3)">Service Type</th>
           <th onclick="sortSchedule(4)">Status</th>
-          <th>Notes</th>
+          <th>Action</th>
         </tr>
         </thead>
         <tbody id="scheduleBody">
