--- a/front end/user/add-schedule.html
+++ b/front end/user/add-schedule.html
@@ -48,12 +48,8 @@
             <input type="time" id="serviceTime" min="08:00" max="17:00" required />
           </div>
           <div class="form-group">
-            <label for="vehicleSelect">Vehicle</label>
+            <label for="vehicleSelect">Plate Number</label>
             <input id="vehicleSelect" required>
-          </div>
-          <div class="form-group">
-            <label for="specialRequests">Special Requests</label>
-            <textarea id="specialRequests" rows="3"></textarea>
           </div>
           <button type="submit" class="btn">
             <i class="fas fa-calendar-plus"></i>
