--- a/front end/user/vehicle.html
+++ b/front end/user/vehicle.html
@@ -136,7 +136,6 @@
         </div>
       </div>
     </div>
-
    
       <footer>
       <div class="container">
@@ -160,6 +159,6 @@
         <p>© 2025 AutoCare Pro. All Rights Reserved.</p>
       </div>
     </footer>
-    <script src="../assets/js/cars.js"></script>
+  <script src="../assets/js/vehicle.js"></script>
   </body>
 </html>
