--- a/front end/admin/add-service-record.html
+++ b/front end/admin/add-service-record.html
@@ -36,20 +36,20 @@
         <h2>Add New Service Record</h2>
         <form id="addServiceRecordForm">
           <div class="form-group">
-            <label for="userId">Customer</label>
-            <select id="userId" required></select>
+            <label for="customer">Customer</label>
+            <input type="text" id="customer" placeholder="Enter customer ID or name" required />
           </div>
           <div class="form-group">
-            <label for="vehicleId">Vehicle</label>
-            <select id="vehicleId" required></select>
+            <label for="vehicle">Vehicle</label>
+            <input type="text" id="vehicle" placeholder="Enter vehicle ID or details" required />
           </div>
           <div class="form-group">
-            <label for="serviceId">Service</label>
-            <select id="serviceId" required></select>
+            <label for="service">Service</label>
+            <input type="text" id="service" placeholder="Enter service ID or name" required />
           </div>
           <div class="form-group">
-            <label for="serviceDate">Date</label>
-            <input type="date" id="serviceDate" required />
+            <label for="date">Date</label>
+            <input type="date" id="date" required />
           </div>
           <div class="form-group">
             <label for="cost">Cost ($)</label>
@@ -57,15 +57,12 @@
           </div>
           <div class="form-group">
             <label for="status">Status</label>
-            <select id="status">
+            <select id="status" required>
+              <option value="">Select status</option>
               <option value="Completed">Completed</option>
               <option value="Pending">Pending</option>
               <option value="Cancelled">Cancelled</option>
             </select>
-          </div>
-          <div class="form-group">
-            <label for="notes">Notes</label>
-            <textarea id="notes" rows="3"></textarea>
           </div>
           <button type="submit" class="btn">
             <i class="fas fa-save"></i>
@@ -100,57 +97,47 @@
     </footer>
 
     <script>
-      // Populate dropdowns and handle form submission
-      // This assumes db.users, db.cars, db.services are accessible
-
       document.addEventListener("DOMContentLoaded", () => {
-        const userSelect = document.getElementById("userId");
-        const vehicleSelect = document.getElementById("vehicleId");
-        const serviceSelect = document.getElementById("serviceId");
+        const form = document.getElementById("addServiceRecordForm");
+        const formMessage = document.getElementById("formMessage");
 
-        // Populate users
-        db.users.forEach((user) => {
-          const option = document.createElement("option");
-          option.value = user.id;
-          option.textContent = user.name;
-          userSelect.appendChild(option);
-        });
-
-        // Populate vehicles
-        db.cars.forEach((car) => {
-          const option = document.createElement("option");
-          option.value = car.id;
-          option.textContent = `${car.make} ${car.model}`;
-          vehicleSelect.appendChild(option);
-        });
-
-        // Populate services
-        db.services.forEach((service) => {
-          const option = document.createElement("option");
-          option.value = service.id;
-          option.textContent = service.name;
-          serviceSelect.appendChild(option);
-        });
-
-        // Form submission
-        document.getElementById("addServiceRecordForm").addEventListener("submit", (e) => {
+        form.addEventListener("submit", async (e) => {
           e.preventDefault();
-          const newRecord = new ServiceHistory(
-            Date.now().toString(),
-            userSelect.value,
-            vehicleSelect.value,
-            serviceSelect.value,
-            new Date(document.getElementById("serviceDate").value).toISOString(),
-            parseFloat(document.getElementById("cost").value),
-            document.getElementById("status").value,
-            document.getElementById("notes").value
-          );
-          db.serviceHistory.push(newRecord);
-          db.save();
-          document.getElementById("formMessage").textContent = "Service record added successfully.";
-          document.getElementById("addServiceRecordForm").reset();
+
+          const newRecord = {
+            recordID: 0,
+            customer: document.getElementById("customer").value,
+            vehicle: document.getElementById("vehicle").value,
+            service: document.getElementById("service").value,
+            date: document.getElementById("date").value,
+            cost: parseFloat(document.getElementById("cost").value),
+            status: document.getElementById("status").value
+          };
+
+          try {
+            const response = await fetch("http://localhost:8080/api/service-record", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json"
+              },
+              body: JSON.stringify(newRecord)
+            });
+
+            if (!response.ok) {
+              throw new Error("Failed to save service record");
+            }
+
+            formMessage.textContent = "✅ Service record added successfully.";
+            formMessage.style.color = "green";
+            form.reset();
+          } catch (error) {
+            console.error(error);
+            formMessage.textContent = "❌ Error saving service record.";
+            formMessage.style.color = "red";
+          }
         });
       });
     </script>
+
   </body>
 </html>
